--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "jest",
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
+    "prettier": "prettier --single-quote --write \"src/**/*.ts?(x)\"",
     "build": "npx tsc"
   },
   "repository": {
