--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "City of Vernonia for Esri's JavaScript API.",
   "scripts": {
-    "test": "jest",
+    "test": "npm run lint && jest",
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "prettier": "prettier --single-quote --write \"src/**/*.ts?(x)\"",
     "build": "npx tsc"
@@ -24,9 +24,6 @@
     "url": "https://github.com/CityOfVernonia/cov-jsapi/issues"
   },
   "homepage": "https://github.com/CityOfVernonia/cov-jsapi#readme",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
-  },
   "devDependencies": {
     "@types/arcgis-js-api": "4.16.0",
     "@types/jest": "^26.0.13",
@@ -37,10 +34,8 @@
     "eslint-config-prettier": "^6.11.0",
     "jest": "^26.4.2",
     "prettier": "^2.1.1",
+    "tslib": "^2.0.1",
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
-  },
-  "dependencies": {
-    "tslib": "^2.0.1"
   }
 }
