--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "npm run lint && jest && npm run build",
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
-    "prettier": "prettier --single-quote --write \"src/**/*.ts?(x)\"",
+    "prettier": "prettier --single-quote --write \"src/**/*.ts?(x)\" && prettier --single-quote --write \"__tests__/**/*.ts\"",
     "build": "npx tsc && npx node-sass src/css/__test.scss > dist/test.css",
     "precommit": "npm run prettier && npm run test"
   },
@@ -44,5 +44,8 @@
   "dependencies": {
     "bootswatch": "^4.5.2",
     "js-cookie": "^2.2.1"
+  },
+  "arcgis": {
+    "type": "jsapi"
   }
 }
